--- a/AD_Src/AccessDesk/AccessDesk_Win/AccessDesk_Win.csproj
+++ b/AD_Src/AccessDesk/AccessDesk_Win/AccessDesk_Win.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.6" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.6" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.6" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.6" />
@@ -22,7 +23,6 @@
     <Folder Include="Assets\" />
     <Folder Include="Enums\" />
     <Folder Include="Helpers\" />
-    <Folder Include="Services\Interfaces\" />
   </ItemGroup>
 
 </Project>
