Folder structure re-organized

--- a/AD_Src/AccessDesk/AccessDesk_ASP_Server/appsettings.json
+++ b/AD_Src/AccessDesk/AccessDesk_ASP_Server/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AD_DBConnection": "Server=.\\sqlexpress; Database=AccessDeskDB; Trusted_Connection=True; TrustServerCertificate=True" //SQL Server ConnectionString
-    //"ErpConnection": "Server=localhost; Database=erp_api; User=root; Password=root; Port=3306;" //MySQL ConnectionString
+    "AD_DBConnection": "Server=.\\sqlexpress; Database=AccessDeskDB; Trusted_Connection=True; TrustServerCertificate=True"
   }
 }
