--- a/AD_Src/AccessDesk/AccessDesk_ASP_Server/AccessDesk_ASP_Server.csproj
+++ b/AD_Src/AccessDesk/AccessDesk_ASP_Server/AccessDesk_ASP_Server.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\Enums\**" />
+    <Content Remove="Models\Enums\**" />
+    <EmbeddedResource Remove="Models\Enums\**" />
+    <None Remove="Models\Enums\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
       <PrivateAssets>all</PrivateAssets>
@@ -21,12 +28,20 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\Configurations\" />
     <Folder Include="Models\DTOs\" />
     <Folder Include="Helpers\" />
-    <Folder Include="Models\Enums\" />
-    <Folder Include="Data\" />
+    <Folder Include="Models\Validators\" />
+    <Folder Include="Middleware\" />
+    <Folder Include="Configurations\" />
+    <Folder Include="Attributes\" />
     <Folder Include="Repositories\Interfaces\" />
+    <Folder Include="Repositories\Implementations\" />
     <Folder Include="Services\Interfaces\" />
+    <Folder Include="Services\Implementations\" />
+    <Folder Include="Utilities\Constants\" />
+    <Folder Include="Utilities\Helpers\" />
+    <Folder Include="Utilities\Enums\" />
   </ItemGroup>
 
 </Project>
