Implement JWT-based authentication and user management

--- a/AD_Src/AccessDesk/AccessDesk_ASP_Server/appsettings.json
+++ b/AD_Src/AccessDesk/AccessDesk_ASP_Server/appsettings.json
@@ -1,12 +1,45 @@
 {
+  "ConnectionStrings": {
+    "AD_DBConnection": "Server=.\\sqlexpress; Database=AccessDeskDB; Trusted_Connection=True; TrustServerCertificate=True"
+  },
+  "JwtSettings": {
+    "SecretKey": "ThisIsAVerySecretKeyThatShouldBeAtLeast256BitsLong!",
+    "Issuer": "AuthAPI",
+    "Audience": "AuthAPI-Users",
+    "AccessTokenExpirationMinutes": 15,
+    "RefreshTokenExpirationDays": 7
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log-.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "AD_DBConnection": "Server=.\\sqlexpress; Database=AccessDeskDB; Trusted_Connection=True; TrustServerCertificate=True"
-  }
+  "AllowedHosts": "*"
 }
