--- a/AD_Src/AccessDesk/AccessDesk_ASP_Server/AccessDesk_ASP_Server.csproj
+++ b/AD_Src/AccessDesk/AccessDesk_ASP_Server/AccessDesk_ASP_Server.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.18" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.18" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.7">
       <PrivateAssets>all</PrivateAssets>
@@ -24,22 +28,17 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.12.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Data\Configurations\" />
-    <Folder Include="Models\DTOs\" />
     <Folder Include="Helpers\" />
-    <Folder Include="Models\Validators\" />
-    <Folder Include="Middleware\" />
-    <Folder Include="Configurations\" />
     <Folder Include="Attributes\" />
     <Folder Include="Repositories\Interfaces\" />
     <Folder Include="Repositories\Implementations\" />
-    <Folder Include="Services\Interfaces\" />
-    <Folder Include="Services\Implementations\" />
-    <Folder Include="Utilities\Constants\" />
     <Folder Include="Utilities\Helpers\" />
     <Folder Include="Utilities\Enums\" />
   </ItemGroup>
