missing packages added

--- a/AD_Src/AccessDesk/AccessDesk_ASP_Server/appsettings.Development.json
+++ b/AD_Src/AccessDesk/AccessDesk_ASP_Server/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ConnectionStrings": {
+    "AD_DBConnection": "Server=.\\sqlexpress; Database=AccessDeskDB; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True"
+  },
+  "JwtSettings": {
+    "SecretKey": "ThisIsAVerySecretKeyForDevelopmentEnvironment!",
+    "Issuer": "AuthAPI-Dev",
+    "Audience": "AuthAPI-Dev-Users",
+    "AccessTokenExpirationMinutes": 60,
+    "RefreshTokenExpirationDays": 30
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug"
     }
   }
 }
