--- a/AD_Src/AccessDesk/AccessDesk_ASP_Server/appsettings.json
+++ b/AD_Src/AccessDesk/AccessDesk_ASP_Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AD_DBConnection": "Server=.\\sqlexpress; Database=AccessDeskDB; Trusted_Connection=True; TrustServerCertificate=True"
+    "AD_DBConnection": "Server=.\\sqlexpress; Database=AccessDeskDB; Trusted_Connection=True; MultipleActiveResultSets=true; TrustServerCertificate=True"
   },
   "JwtSettings": {
     "SecretKey": "ThisIsAVerySecretKeyThatShouldBeAtLeast256BitsLong!",
